[gd_scene load_steps=8 format=3 uid="uid://by2q2db55r8um"]

[ext_resource type="Script" path="res://tests/test-building/world.gd" id="1_ju0so"]
[ext_resource type="PackedScene" uid="uid://44jn8g2en3x3" path="res://player2/player.tscn" id="1_rjrbx"]
[ext_resource type="Texture2D" uid="uid://dnkw3kdav87vf" path="res://assets/1-meter-plank.svg" id="4_6dw28"]
[ext_resource type="Shader" path="res://tests/test-building/preview.gdshader" id="4_dt40j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5r5qc"]
shader = ExtResource("4_dt40j")
shader_parameter/blocked = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfd50"]
size = Vector2(20, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rdb8"]
size = Vector2(4, 4)

[node name="World" type="Node2D"]
script = ExtResource("1_ju0so")

[node name="Player" parent="." instance=ExtResource("1_rjrbx")]
position = Vector2(0, -100)
inifnite_jumps = true

[node name="Preview" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
material = SubResource("ShaderMaterial_5r5qc")
texture = ExtResource("4_6dw28")

[node name="PreviewArea" type="Area2D" parent="Preview"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Preview/PreviewArea"]
shape = SubResource("RectangleShape2D_nfd50")

[node name="SnappingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnappingArea"]
shape = SubResource("RectangleShape2D_6rdb8")

[connection signal="body_entered" from="Preview/PreviewArea" to="." method="_on_preview_area_body_entered"]
[connection signal="body_exited" from="Preview/PreviewArea" to="." method="_preview_area_body_exited"]
[connection signal="body_entered" from="SnappingArea" to="." method="_on_snapping_area_body_entered"]
[connection signal="body_exited" from="SnappingArea" to="." method="_on_snapping_area_body_exited"]
